--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ tokio = { version = "1.41.1", features = ["full"] }
 serde = { version = "1.0.215", features = ["derive"] }
 reqwest = { version = "0.12.9", features = ["json"] }
 clap = { version = "4.5.21", features = ["derive"] }
+serde_json = "1.0.133"
